# Gobang

./: CMakeLists.txt  checkerboard.cpp  checkerboard.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
